--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,8 @@
     "@angular/fire": "^5.2.1",
     "firebase": "^7.2.0",
     "firebase-admin": "^8.0.0",
-    "firebase-functions": "^3.1.0"
+    "firebase-functions": "^3.1.0",
+    "mathjs": "^6.6.3"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6"
